Finished route endpoint. removed user location route duplicate
